--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Nodejs based storage server - Rest API",
   "main": "rest-store.js",
-  "author": "Kavisundar <kavi@kressantech.com>",
+  "author": "Kavisundar SK <kavi@kressantech.com>",
   "license": "MIT",
   "repository": {
     "type": "git",
