--- a/package.json
+++ b/package.json
@@ -8,5 +8,12 @@
   "repository": {
     "type": "git",
     "url": "git+https://github.com/kressantech/RestStorage.git"
+  },
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "fs-extra": "^11.1.1",
+    "multer": "^1.4.4-lts.1",
+    "voca": "^1.4.0"
   }
 }
