--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.18.2",
     "fs-extra": "^11.1.1",
     "multer": "^1.4.4-lts.1",
-    "voca": "^1.4.0"
+    "voca": "^1.4.0",
+    "minimist": "^1.2.8"
   }
 }
